# MiniSGBDR

./: CMakeLists.txt  Menu.c  Menu.h  README.md  Table.c  Table.h  data.c  data.h  main.c  query.c  query.h  stokage.c  stokage.h
