cmake_minimum_required(VERSION 3.28)
project(ProjectC C)

set(CMAKE_C_STANDARD 11)

add_executable(ProjectC main.c
        Table.c
        Table.h
        data.c
        data.c
        data.h
        data.h
        query.c
        query.h
        stokage.c
        stokage.c
        stokage.h
        Menu.h
        Menu.c
)
